unpackaged/main/default/objects/project_cloud__Work_Type__c/project_cloud__Work_Type__c.object-meta.xml
<CustomObject>
    <description>Work types that your organization performs</description>
    <label>Work Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>