unpackaged/main/default/objects/project_cloud__Work_Type__c/fields/ccpe_r__Default_Skill_Cost__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Default_Skill_Cost__c</fullName>
    <label>Default Skill Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>