unpackaged/main/default/objects/project_cloud__Work_Type__c/fields/ccpe_r__Default_Skill_Rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Default_Skill_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Skill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>