unpackaged/main/default/objects/project_cloud__Work_Type__c/fields/project_cloud__IsRateable__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsRateable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value used for Expertise work types to indicate whether the assigned capabilities are able to have a proficiency rating applied.</description>
    <label>Rating Enabled</label>
    <type>Checkbox</type>
</CustomField>