unpackaged/main/default/objects/project_cloud__Work_Type__c/fields/project_cloud__Parent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associations the Work Type with a parent Work Type. Child Work Types are displayed as secondary skills in the Capabilities page</inlineHelpText>
    <label>Parent</label>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <type>Lookup</type>
</CustomField>