unpackaged/main/default/objects/project_cloud__Work_Type__c/fields/project_cloud__Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Type__c</fullName>
    <inlineHelpText>Denotes whether a Work Type is a Skill or Location</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>