unpackaged/main/default/objects/project_cloud__Work_Type__c/listViews/project_cloud__All_Types.listView-meta.xml
<ListView>
    <fullName>project_cloud__All_Types</fullName>
    <columns>NAME</columns>
    <columns>project_cloud__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>